<resources>
    <string name="app_name">KotlinMPP</string>
    <string name="server_title">Server Title</string>
    <string name="server_url">Server URL</string>
    <string name="server_token">Authorization Token</string>
    <string name="new_server">Add New Server</string>
    <string name="edit_server">Edit Server</string>
    <string name="server_details">Server Details</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="error_empty_field">All fields are required</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="deleted">Item have been deleted</string>
    <string name="confirm_delete">Do you want to delete this item?\n%s</string>
</resources>
